<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Feedback"
    tools:showIn="@layout/activity_feedback">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="0dp"
                android:adjustViewBounds="true"
                android:layout_marginRight="0dp"
                android:src="@drawable/health" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:textSize="25dp"
                android:background="@color/blue"
                android:padding="2dp"
                android:text="Developers"
                android:textAlignment="center"
                android:textColor="@color/background2"
                android:textStyle="bold" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:text="Find us on :"
                    android:textSize="20dp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp">

                <ImageView
                    android:layout_width="144dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="0dp"
                    android:src="@drawable/fb" />

                <TextView
                    android:id="@+id/fb"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:text="@string/facebook"
                    android:textSize="20dp" />

            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp">

                <ImageView
                    android:layout_width="144dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="0dp"
                    android:src="@drawable/in"
                    android:autoLink="web"
                    android:linksClickable="true"
                    android:clickable="true"
                    android:cursorVisible="true"
                    android:onClick="linkedIn"/>

                <TextView
                    android:id="@+id/linked"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:text="@string/LinkedIn"
                    android:textSize="20dp"


                   />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp">

                <ImageView
                    android:layout_width="144dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="0dp"
                    android:src="@drawable/google" />

                <TextView
                    android:id="@+id/google"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:text="@string/google_plus"
                    android:textSize="20dp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp">

                <ImageView
                    android:layout_width="144dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="0dp"
                    android:src="@drawable/email" />

                <TextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:text="@string/Email"
                    android:textSize="20dp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp">

                <ImageView
                    android:layout_width="144dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="0dp"
                    android:src="@drawable/you"
                    />

                <TextView
                    android:id="@+id/youtube"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:text="@string/Youtube"
                    android:textSize="20dp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp">

                <ImageView
                    android:layout_width="144dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="0dp"
                    android:src="@drawable/twitter" />

                <TextView
                    android:id="@+id/twitter"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:text="@string/Twitter"
                    android:textSize="20dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp">

                <ImageView
                    android:layout_width="144dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="0dp"
                    android:src="@drawable/insta" />

                <TextView
                    android:id="@+id/instagram"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:text="@string/Instagram"
                    android:textSize="20dp" />
            </TableRow>



        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>